--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="canonical" href="https://task-management-app-manthanank.vercel.app/">
+  <link rel="canonical" href="https://github.com/sid-warrior/Task-Manger.github" />
   <meta property="og:title" content="Task Management App" />
   <meta name="author" content="Manthan Ankolekar" />
   <meta name="keywords" content="angular, nodejs. express, mongodb" />
